<resources>
    <string name="app_name">Emergências</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_call">Chamar</string>
    <string name="title_contacts">Contatos</string>
    <string name="title_user">Perfil</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Nome</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Registrar</string>
    <string name="action_sign_in_short">Logar</string>
    <string name="stay_connected">Manter-se conectado!</string>
    <!-- Strings related to call -->
    <string name="call">Ligar</string>
    <!-- Strings related to profile user -->
    <string name="update_profile">Atualizar perfil</string>
    <string name="save">Salvar</string>
    <string name="name_user">TextView</string>
    <string name="error_empty_fields">Todos os campos devem ser preenchidos!</string>
    <string name="update_success">Usuário atualizado com sucesso!</string>
    <string name="update_error">Erro ao atualizar usuário!</string>
</resources>